token parameter changed to applicationId
token parameter changed to applicationId
in some endpoints
